<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.ac.ui.cs.ristek.issuetracker.NewIssueActivity">

    <FrameLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/topik_masalah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topik_masalah"
            android:inputType="text"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kategori"
            android:inputType="text"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/input3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/keterangan_pengaduan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keterangan_pengaduan"
            android:inputType="text"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/input4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/anonim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonim"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"/>

    </FrameLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation"/>

</LinearLayout>
